# netbox-virtual-tour

./: .gitignore  NETBOX_PORTING.md  README.md  SETUP.md  pyproject.toml  requirements.txt  smoke_test.py
netbox_virtual_tour/: __init__.py  admin.py  apps.py  models.py  template_content.py  urls.py  views.py
netbox_virtual_tour/migrations/: 0001_initial.py
netbox_virtual_tour/static/netbox_virtual_tour/css/: editor.css
netbox_virtual_tour/static/netbox_virtual_tour/js/: editor.js
netbox_virtual_tour/templates/netbox_virtual_tour/: _tour_cta.html  editor.html  tour_panel.html  viewer.html  virt_tour_cta.html
standalone/: NETBOX_PORTING.md  README.md  settings.py  setup.py  smoke_test.py  urls.py
standalone/netbox_virt_holder/: manage.py  pyproject.toml
standalone/netbox_virt_holder/netbox_virtual_tour/management/commands/: dev_reset.py
standalone/netbox_virt_holder/netbox_virtual_tour/templates/netbox_virtual_tour/: editor.html  viewer.html
standalone/netbox_virt_holder/netbox_virtual_tour/templatetags/: tour_tags.py
standalone/netbox_virt_holder/standalone/: wsgi.py
standalone/netbox_virt_holder/standalone/stub_dcim/: apps.py  models.py  urls.py
standalone/netbox_virt_holder/standalone/stub_dcim/migrations/: 0001_initial.py
standalone/netbox_virt_holder/standalone/templates/: base.html
standalone/netbox_virt_holder/standalone/templates/base/: layout.html
standalone/netbox_virt_holder/standalone/templates/stub_dcim/: location_detail.html  site_detail.html  site_form.html  site_list.html
standalone/netbox_virtual_tour/: template_content.py
standalone/netbox_virtual_tour/templates/netbox_virtual_tour/: editor.html  viewer.html
standalone/stub_dcim/: views.py
standalone/templates/base/: layout.html
standalone/templates/stub_dcim/: _tour_cta.html  location_form.html
(+2 files in other folders)
